# opencc-mirror

./: .gitignore  .gitmodules
docs/: multi-agent-isolation.md
opencc-mirror-app/: package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
opencc-mirror-app/src/: App.tsx  index.html
opencc-mirror-app/src-tauri/: Cargo.toml  tauri.conf.json
opencc-mirror-app/src-tauri/capabilities/: default.json
opencc-mirror-app/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  store.rs  tray.rs
opencc-mirror-app/src-tauri/src/commands/: mod.rs
opencc-mirror-app/src-tauri/src/database/: mod.rs  schema.rs
opencc-mirror-app/src-tauri/src/database/dao/: instances.rs  mcp_servers.rs  mod.rs  providers.rs  skills.rs
opencc-mirror-app/src-tauri/src/instance/: builder.rs  mod.rs
opencc-mirror-app/src-tauri/src/instance/steps/: mod.rs
opencc-mirror-app/src-tauri/src/provider/: env_builder.rs  mod.rs  presets.rs
opencc-mirror-app/src/components/: CreateInstanceDialog.tsx  InstanceList.tsx  ProviderPage.tsx  SkillPage.tsx
opencc-mirror-app/src/config/: providerPresets.ts
opencc-mirror-app/src/hooks/: useInstances.ts
opencc-mirror-app/src/lib/api/: instances.ts  types.ts
opencc-mirror-app/src/styles/: globals.css
